k8s/redis-gui.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-gui-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8081
  selector:
    app: redis-gui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-gui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-gui
  template:
    metadata:
      labels:
        app: redis-gui
    spec:
      containers:
      - name: redis-commander
        image: rediscommander/redis-commander:latest
        ports:
        - containerPort: 8081
